--- a/public/assets/scss/_header.scss
+++ b/public/assets/scss/_header.scss
@@ -535,6 +535,9 @@
 				align-items: center;
 				justify-content: center;
 				background-color: $primary-color;
+				@media #{$xs} {
+					padding: 15px 10px;
+				}
 			}
 		}
 		& .nav-menu {
